--- a/workbook-1.3/src/main/resources/static/index.html
+++ b/workbook-1.3/src/main/resources/static/index.html
@@ -8,5 +8,6 @@
         <h1>Java > Python.</h1>
         <h1>I spilled Java all over my paper.</h1>
         <h1>My dog ate my Java.</h1>
+        <h1>Hello World!</h1>
     </body>
 </html>
